/*
 * Copyright 2019 Hayo van Loon
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";

package bobsknobshop.classy.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "bobsknobshop/common/v1/common.proto";

option java_multiple_files = true;
option java_package = "gl.bobsknobshop.classy.v1";
option go_package = "github.com/HayoVanLoon/genproto/bobsknobshop/classy/v1;classy";


// A service for classifying things.
service Classy {


    // Returns a classification for a comment
    rpc ClassifyComment(common.v1.Comment) returns (Classification) {
    }

    // Returns all classifications
    // TODO: debug, remove before go-live
    rpc ListClassifications(ListClassificationsRequest) returns (ListClassificationsResponse) {
    }
}

message Classification {

    // Unique resource name.
    string name = 1;

    // Creation timestamp.
    int64 created_on = 2;

    // The version of the service that did the prediction
    string service_version = 3;

    // Comment ID.
    string comment = 4;

    // The predicted category.
    string category = 5;
}

message ListClassificationsRequest {
}

message ListClassificationsResponse {

    repeated Classification classifications = 1;
}
