/*
 * Copyright 2019 Hayo van Loon
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";

package bobsknobshop.commentcentre.v1;

import "google/api/annotations.proto";

import "bobsknobshop/common/v1/common.proto";

option java_multiple_files = true;
option java_package = "gl.bobsknobshop.commentcentre.v1";
option go_package = "github.com/HayoVanLoon/genproto/bobsknobshop/commentcentre/v1;commentcentre";


// A service for classifying things.
service Commentcentre {

    // Returns a classification for a comment
    rpc CreateComment(common.v1.Comment) returns (common.v1.Comment) {
    }

    // Returns all comments
    // TODO: debug, remove before go-live
    rpc ListComments(ListCommentsRequest) returns (ListCommentsResponse) {
    }
}

message ListCommentsRequest {}

message ListCommentsResponse {
    repeated common.v1.Comment comments = 1;
}
