/*
 * Copyright 2019 Hayo van Loon
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";

package bobsknobshop.truth.v1;

import "google/api/annotations.proto";

option java_multiple_files = true;
option java_package = "gl.bobsknobshop.truth.v1";
option go_package = "github.com/HayoVanLoon/genproto/bobsknobshop/truth/v1;truth";


// A service for classifying things.
service Truth {

    // Returns a classification for a comment
    rpc GetServiceKpi(GetServiceKpiRequest) returns (GetServiceKpiResponse) {
    }
}

message GetServiceKpiRequest {

    string service = 1;

    int64 start_timestamp = 2;

    int64 end_timestamp = 3;
}

message GetServiceKpiResponse {

    repeated Version versions  = 1;

    message Version {

        string name = 1;

        int64 start_timestamp = 2;

        int64 end_timestamp = 3;

        string unit = 4;

        float value = 5;
    }
}
